--- a/web-weaver-token-generator/pom.xml
+++ b/web-weaver-token-generator/pom.xml
@@ -15,9 +15,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>de.konsl</groupId>
+            <groupId>com.github.Konsl</groupId>
             <artifactId>web-weaver-api</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>908ea2d6</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
