--- a/web-weaver-token-generator/pom.xml
+++ b/web-weaver-token-generator/pom.xml
@@ -13,11 +13,18 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>com.github.Konsl</groupId>
             <artifactId>web-weaver-api</artifactId>
-            <version>908ea2d6</version>
+            <version>-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
